package = { name='dng', version='0.0.0', edition='2024', description = 'Process DNG image'}
features = { jxl=['dep:jxl-oxide'], default = ['jxl'] }
[dependencies]
bytemuck='*'
num = { git='https://github.com/Matthias-Fauconneau/num' }
vector = { git='https://github.com/Matthias-Fauconneau/vector' }
image = { git='https://github.com/Matthias-Fauconneau/image', features = ['io', 'exr'] }
ui = { git='https://github.com/Matthias-Fauconneau/ui' }
vulkano = { git='https://github.com/vulkano-rs/vulkano', default-features=false, features=['macros'] } # same version as ui (which needs drm modifier from git version)
vulkano-spirv = { git='https://github.com/Matthias-Fauconneau/vulkano-spirv' }
jxl-oxide = {  version='*', features=['lcms2'], optional=true }
rawler={git='https://github.com/Matthias-Fauconneau/dnglab'}

[build-dependencies]
naga = { version='*', features = ['wgsl-in','spv-out'] }
bytemuck = { version='*' }

[patch.'https://github.com/vulkano-rs/vulkano']
vulkano = { git='https://github.com/Matthias-Fauconneau/vulkano'  } # drm modifier
